Added github link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://web.facebook.com/profile.php?id=100008818988632"><i class="ti-facebook" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://www.instagram.com/_d.leroux_/?next=%2F&hl=en"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://github.com/DanniRoux"><i class="ti-github" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/danika-le-roux-9347822aa/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
