--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 17/09/2003</li>
                     <li><span>Email</span> : danikaleroux111@gmail.com</a></li>
-                    <li><span>Phone</span> : + (27) 913 5006</li>
+                    <li><span>Phone</span> : 076 913 5006</li>
                     <li><span>Address</span> : 24 Flamingo Avenue, Vereeniging, Gauteng</li>
                 </ul>
                 <ul class="social-icons pt-3">
@@ -513,7 +513,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (27) 913 5006</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted"> 076 913 5006</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
