Updated address in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li><span>Birthdate</span> : 17/09/2003</li>
                     <li><span>Email</span> : danikaleroux111@gmail.com</a></li>
                     <li><span>Phone</span> : 076 913 5006</li>
-                    <li><span>Address</span> : 24 Flamingo Avenue, Vereeniging, Gauteng</li>
+                    <li><span>Address</span> : Vereeniging, Gauteng</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://web.facebook.com/profile.php?id=100008818988632"><i class="ti-facebook" aria-hidden="true"></i></a></li>
@@ -521,7 +521,7 @@
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">24 Flamingo Avenue, Vereeniging, Gauteng.</span></h6>
+                                <h6 class="d-inline">Address :<br> <span class="text-muted"> Vereeniging, Gauteng.</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
